# engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
app/: CMakeLists.txt  main.cpp
bench/: CMakeLists.txt  README.md
bench/matmul/: gen_matrices.py  matmul.cpp  plot_bench.py  results.csv
bench/quat_slerp/: generate_data.cpp  plot_bench.py  quat_slerp.cpp  result.csv
src/: CMakeLists.txt  main.cpp
src/core/math/: mat4.hpp  quat.hpp  simd_backend.hpp  vec3.hpp  vec3packed.hpp  vec4.hpp
src/core/memory/: allocator.cpp  allocator.hpp  allocator_handle.hpp  allocator_utils.hpp  default_heap.cpp  default_heap.hpp  linear_arena.cpp  linear_arena.hpp  page_allocator.cpp  page_allocator.hpp  pool_allocator.cpp  pool_allocator.hpp  virtual_memory.cpp  virtual_memory.hpp
src/platform/event/: event.hpp  event_queue.hpp
src/platform/input/: input.hpp  key_codes.hpp
src/platform/input_sdl/: input_sdl.cpp  input_sdl.hpp
src/platform/window/: window.hpp  window_desc.hpp  window_events.hpp
src/platform/window_sdl/: window_sdl.cpp  window_sdl.hpp
test/: CMakeLists.txt  math_test.cpp  memory_test.cpp  window_test.cpp
